2005-08-08  Richard Sandiford  <richard@codesourcery.com>

	PR c/22458
	* c-decl.c (c_begin_compound_stmt): Set the initial body to
	error_mark_node, not NULL.

2005-08-07  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa64-regs.h (CONDITIONAL_REGISTER_USAGE): Fix loop upper bound.

2005-08-06  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR pch/14940
	Backport from mainline:

	* config.host (hppa*-*-hpux*, hppa*-*-linux): Define out_host_hook_obj
	and host_xmake_file using new host configuration files.
	* config/pa/pa-host.c, config/pa/x-hpux, config/pa/x-linux: New files.

2005-08-06  Christian Joensson  <christian.joensson@gmail.com>

	PR target/20673
	Backport from mainline:

	2005-04-15  David S. Miller  <davem@davemloft.net>

	* config/sparc/sparc.h (sparc_hard_reg_printed): Mark as GTY(()).

2005-08-05  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa.c (function_arg): Fix typo in last change.

	* pa.c (function_value): Handle small aggregates on 32-bit targets.
	(function_arg): Pass small aggregates in general registers on 32-bit
	targets.
	* som.h (MEMBER_TYPE_FORCES_BLK): Delete define.

2005-08-04  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/install.texi (Specific): Adjust link to openavr.org.
	(Specific): Remove broken reference to GCC 2.8.1 for OS/2.
	(Binaries): Adjust HP-UX Porting Center link.
	(Binaries): Adjust Free Software Foundation ordering link.
	(Binaries): Remove broken link to Sinix/Reliant Unix binaries.

2005-08-04  Eric Botcazou  <ebotcazou@adacore.com>

	* doc/invoke.texi (Optimize Options): Document that -funswitch-loops
	is enabled at -O3.

2005-08-03  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/21723
	* pa.md: Remove fcpy alternative from movhi and movqi patterns.
	* pa32-regs.h (HARD_REGNO_NREGS): Return two floating point registers
	for complex modes when generating code for PA 1.0.
	(VALID_FP_MODE_P): New macro.
	(HARD_REGNO_MODE_OK): Use VALID_FP_MODE_P.  Use non-overlapping register