@@ -1,5 +1,10 @@
 2005-08-08  Richard Sandiford  <richard@codesourcery.com>
 
+	PR middle-end/21964
+	* gcc.c-torture/execute/pr21964-1.c: New test.
+
+2005-08-08  Richard Sandiford  <richard@codesourcery.com>
+
 	PR c/22458
 	* gcc.dg/pr22458-1.c: New test.
 
